# ibkr2kap

./: .gitignore  PROJECT_RULES.md  README.md  debug_ca_validation.py  debug_et.py  debug_key.py  inspect_ibflex.py  inspect_real_xml.py  inspect_with_parser.py  inspect_with_parser_v2.py  main.py  pyproject.toml  test_monkeypatch.py  test_preprocessing.py
.agent/rules/tech-stacks/: python-3.12-sqlalchemy-streamlit.md
.agent/skills/executor/: SKILL.md
.agent/workflows/: execute.md  plan.md  research-phase.md  verify.md
.gemini/: GEMINI.md
.gsd/: DEBUG.md  DECISIONS.md  JOURNAL.md  ROADMAP.md  SPEC.md  STATE.md  TODO.md
.gsd/milestones/: v1.0-AUDIT.md  v1.0-SUMMARY.md
.gsd/phases/0/: 0-2-SUMMARY.md
docs/: FLEX_QUERY_SETUP.md  GERMAN_TAX_THEORY.md  detailed-project-idea-description.md
scripts/: create_mac_app.command  ibkr2kap_runner.sh  launch_windows.bat
src/: app.py
src/ibkr_tax/: __init__.py  launcher.py
tests/: conftest.py  test_corporate_actions.py  test_corporate_actions_spinoff.py  test_csv_parser.py  test_db_setup.py  test_e2e.py  test_e2e_corporate_actions.py  test_e2e_reverse_split.py  test_ecb_rates.py  test_excel_export.py  test_excel_export_combined.py  test_fifo.py  test_fifo_runner.py  test_flex_parser.py  test_flex_parser_corporate_actions.py  test_flex_parser_split_grouping.py  test_fx_models.py  test_manual_positions.py  test_options.py  test_phase15_logic.py  test_pipeline.py  test_repository.py  test_reverse_split_engine.py  test_schemas.py  test_tax_aggregator.py  test_transfer_engine.py
tests/services/: test_fx_fifo_engine.py
(+144 files in other folders)
